First attempt in FlightSurety Project

--- a/src/dapp/index.html
+++ b/src/dapp/index.html
@@ -11,22 +11,31 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">FlightSurety</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand" href="#">FlightSurety</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
             aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </nav>
+        <span class="navbar-toggler-icon"></span>
+    </button>
+</nav>
 
-    <main class="container">
+<main class="container">
 
-        <div id="display-wrapper" class="top-20">
-        </div>
-        <div class="row top-20">
-            <label class="form">Flight</label> <input type="text" id="flight-number"> <btn class="btn btn-primary" id="submit-oracle">Submit to Oracles</btn>
-        </div>
-    </main>
+    <div id="display-wrapper" class="top-20">
+    </div>
+    <div class="row top-20">
+        <label class="form">Flight</label> <input type="text" id="flight-number"> <btn class="btn btn-primary" id="submit-oracle">Submit to Oracles</btn>
+    </div>
+    <div class="row top-20">
+        <label class="form">Amt</label> <input type="text" id="flight-KD1234"> <btn class="btn btn-primary" id="submit-KD1234">Purcahse Insurance on flight KD1234, 9am</btn>
+    </div>
+    <div class="row top-20">
+        <label class="form">Amt</label> <input type="text" id="flight-KD5678"> <btn class="btn btn-primary" id="submit-KD5678">Purcahse Insurance on flight KD5678, 10am</btn>
+    </div>
+    <div class="row top-20">
+        <label class="form">Amt</label> <input type="text" id="flight-KD8888"> <btn class="btn btn-primary" id="submit-KD8888">Purcahse Insurance on flight KD8888, 11am</btn>
+    </div>
+</main>
 
 </body>
 
